--- a/Tests/Nx.Core.IntegrationTests/App.config
+++ b/Tests/Nx.Core.IntegrationTests/App.config
@@ -7,6 +7,7 @@
   
   
   
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -17,4 +18,4 @@
   </runtime>
 <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  <!-- For additional details on SpecFlow configuration options see https://github.com/techtalk/SpecFlow/wiki/Configuration --><unitTestProvider name="NUnit" /></specFlow></configuration>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow></configuration>
