--- a/Tests/Nx.Domain.IntegrationTests/packages.config
+++ b/Tests/Nx.Domain.IntegrationTests/packages.config
@@ -3,6 +3,7 @@
   <package id="Magnum" version="2.1.2" targetFramework="net45" />
   <package id="MassTransit" version="2.9.5" targetFramework="net45" />
   <package id="MassTransit.RabbitMQ" version="2.9.5" targetFramework="net45" />
+  <package id="NCrunch.Framework" version="2.6.0.18" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
